@@ -25,9 +25,9 @@ import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcErrorR
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcResponse;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcSuccessResponse;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.results.PeerResult;
+import org.hyperledger.besu.ethereum.eth.EthProtocolConfiguration;
 import org.hyperledger.besu.ethereum.eth.manager.EthPeer;
 import org.hyperledger.besu.ethereum.eth.manager.EthPeers;
-import org.hyperledger.besu.ethereum.p2p.network.P2PNetwork;
 import org.hyperledger.besu.ethereum.p2p.network.exceptions.P2PDisabledException;
 import org.hyperledger.besu.ethereum.p2p.rlpx.connections.PeerConnection;
 import org.hyperledger.besu.ethereum.p2p.rlpx.wire.PeerInfo;
@@ -54,7 +54,9 @@ public class AdminPeersTest {
 
   private AdminPeers adminPeers;
 
-  @Mock private P2PNetwork p2pNetwork;
+  private final String VALID_NODE_ID =
+      "6f8a80d14311c39f35f516fa664deaaaa13e85b2f7493f37f6144d86991ec012937307647bd3b9a82abe2974e1407241d54947bbb39763a4cac9f77166ad92a0";
+
   @Mock private EthPeers ethPeers;
 
   @Before
@@ -75,7 +77,7 @@ public class AdminPeersTest {
 
     final JsonRpcResponse response = adminPeers.response(request);
 
-    assertThat(response).isEqualToComparingFieldByField(expectedResponse);
+    assertThat(response).usingRecursiveComparison().isEqualTo(expectedResponse);
   }
 
   @Test
@@ -103,17 +105,28 @@ public class AdminPeersTest {
         new JsonRpcErrorResponse(request.getRequest().getId(), JsonRpcError.P2P_DISABLED);
 
     Assertions.assertThat(adminPeers.response(request))
-        .isEqualToComparingFieldByField(expectedResponse);
+        .usingRecursiveComparison()
+        .isEqualTo(expectedResponse);
   }
 
   private Collection<EthPeer> peerList() {
-    final PeerInfo peerInfo = new PeerInfo(5, "0x0", Collections.emptyList(), 30303, Bytes.EMPTY);
+    final PeerInfo peerInfo =
+        new PeerInfo(5, "0x0", Collections.emptyList(), 30303, Bytes.fromHexString(VALID_NODE_ID));
     final PeerConnection p =
         MockPeerConnection.create(
             peerInfo,
-            InetSocketAddress.createUnresolved("1.2.3.4", 9876),
-            InetSocketAddress.createUnresolved("4.3.2.1", 6789));
-    final EthPeer ethPeer = new EthPeer(p, "eth", c -> {}, List.of(), TestClock.fixed());
+            new InetSocketAddress("1.2.3.4", 9876),
+            new InetSocketAddress("4.3.2.1", 6789));
+    final EthPeer ethPeer =
+        new EthPeer(
+            p,
+            "eth",
+            c -> {},
+            List.of(),
+            EthProtocolConfiguration.DEFAULT_MAX_MESSAGE_SIZE,
+            TestClock.fixed(),
+            Collections.emptyList(),
+            Bytes.random(64));
     return Lists.newArrayList(ethPeer);
   }
 
